maven cleanup + use java 8 API as much as possible